--- a/src/scss/components/_share.scss
+++ b/src/scss/components/_share.scss
@@ -6,6 +6,10 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0px 84px, 0 0;
+  
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
 
   &--bitcoin {
     background-image: url("../images/png/bitcoin-share.png"),
