--- a/src/scss/components/_share.scss
+++ b/src/scss/components/_share.scss
@@ -13,6 +13,7 @@
 
   border: 1px solid yellow;
   width: 100%;
+  height: 100%;
 
   &--bitcoin {
     background-image: url("../images/png/bitcoin-share.png"),
