--- a/src/scss/components/_coin-title-box.scss
+++ b/src/scss/components/_coin-title-box.scss
@@ -12,6 +12,6 @@
     color: $color-text-secondary;
     font-size: 1.3rem;
     margin-top: 0.5rem;
-    background-color: green;
+    background-color: red;
   }
 }
