--- a/src/scss/components/_share.scss
+++ b/src/scss/components/_share.scss
@@ -2,9 +2,10 @@
   background: rgb(255, 255, 255);
   box-shadow: $mild-shadow;
   border-radius: 1.2rem;
-  background-position: center;
+  background-position: 100% 100%;
   background-repeat: no-repeat;
   background-size: contain;
+  border: 1px solid red;
  
   &--bitcoin {
     background-image: url('../images/png/bitcoin-share.png'),
