--- a/src/scss/components/_share.scss
+++ b/src/scss/components/_share.scss
@@ -2,7 +2,7 @@
   background: rgb(255, 255, 255);
   box-shadow: $mild-shadow;
   border-radius: 1.2rem;
-  background-position: 100% 100%;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
   border: 1px solid red;
