--- a/src/scss/components/_share.scss
+++ b/src/scss/components/_share.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   border: 2px solid red;
+  height: 100%;
  
   &--bitcoin {
     background-image: url('../images/png/bitcoin-share.png'),
